# smoke-installer

./: .gitignore  Cargo.toml  README.md  setup.sh
Desktop/: Smoke_Installer.desktop
etc/: install.py  si-install.py
games/hello_smoke/: Cargo.toml
games/hello_smoke/src/: button.rs  install.rs  installed.rs  lib.rs  open.rs  store.rs  web.rs
libl/: Cargo.toml
libl/src/: constants.rs  curl.rs  fs.rs  io.rs  lib.rs  zip.rs
src/: help.rs  ids.rs  installed.rs  main.rs  passwords.rs  setup.rs  store.rs
src/install/: games.rs  mod.rs
tests/: Cargo.toml
tests/src/: lib.rs
tools/: Cargo.toml  install.sh
tools/src/: lib.rs
