[package]
name = "Smoke_Installer"
version = "0.2.0-beta"
authors = ["Nathan McMillan54 <nathanmcmillan54@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "games/hello_smoke/"
]

[dependencies]
# Dependencies
orbtk = "0.2.31"
webbrowser = "0.5.5"
# Games
hello_smoke = { path = "games/hello_smoke/" }
